--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<h2 id="3">Selecting Banzaibet Casino Games</h2>
 			
 				<p>At Banzaibet, the pulsating core of our casino experience is undoubtedly the diverse and thrilling range of games available. Catering to every taste and preference, our game selection is a meticulously curated collection featuring everything from classic favourites to the latest innovations in online gaming. Let's take a closer look at the variety that Banzaibet offers.</p>
-				<h3 id="4">Slots</h3>
+				<h3 id="4" class="scroll">Slots</h3>
 			
 				<p>Enter the world of Banzaibet Slots, where each spin is a note in an enthralling symphony of excitement. Whether you're looking for a quick escape or a long adventure, our slots library has something to captivate your imagination and potentially fill your pockets.</p>
 				<ul>
@@ -192,7 +192,7 @@
 				<li>Burning Wins: Classic 5 Lines: Experience the nostalgia of traditional fruit slots with a modern twist.</li>
 				<li>The Princess &amp; Dwarfs: Rockways: Join a fairy-tale adventure filled with surprises and rich rewards.</li>
 				</ul>
-				<h3 id="5">Fast Games</h3>
+				<h3 id="5" class="scroll">Fast Games</h3>
 			
 				<p>Fast Games at Banzaibet are the epitome of rapid excitement.Ideal for a quick gaming session, these games provide a burst of fun and an opportunity for swift wins, making every second count.</p>
 				<ul>
@@ -203,14 +203,14 @@
 				</ul>
 				<h3>Roulette</h3>
 			
-				<p id="6">Roulette at Banzai bet is a timeless classic, reinvented. Each spin of the wheel is a dance with fate, as players anticipate where the ball will land. The elegant simplicity of roulette, combined with the suspense of the spinning wheel, makes it a perennial favorite. Whether you're placing a straight bet or a complex pattern, roulette promises a sophisticated and exhilarating gaming experience.</p>
+				<p id="6" class="scroll">Roulette at Banzai bet is a timeless classic, reinvented. Each spin of the wheel is a dance with fate, as players anticipate where the ball will land. The elegant simplicity of roulette, combined with the suspense of the spinning wheel, makes it a perennial favorite. Whether you're placing a straight bet or a complex pattern, roulette promises a sophisticated and exhilarating gaming experience.</p>
 				<ul>
 				<li>European Roulette High Stakes: For those who love the classic European layout with higher stakes.</li>
 				<li>American Roulette: Embrace the challenge of the double-zero wheel.</li>
 				<li>American Roulette High Stakes: Amp up the excitement with higher stakes in the American format.</li>
 				<li>Neon City Wheel: Spin into a neon-lit future with this visually stunning take on roulette.</li>
 				</ul>
-				<h3 id="7">Table Games</h3>
+				<h3 id="7" class="scroll">Table Games</h3>
 			
 				<p>The Table Games section at Banzai bet is where minds are challenged and fortunes are made. These games provide a more cerebral experience, where each decision can turn the tide of the game. It's not just about the cards you're dealt but how you play them, making every session a thrilling encounter of wits.</p>
 				<ul>
@@ -219,7 +219,7 @@
 				<li>Craps: Experience the dice-rolling excitement of this casino classic.</li>
 				<li>Satta Matka Express: A fast-paced, number-based game that's sure to thrill.</li>
 				</ul>
-				<h3 id="8">Card Games</h3>
+				<h3 id="8" class="scroll">Card Games</h3>
 			
 				<p>Card Games at Banzaibet are a testament to the timeless allure of playing cards. Each shuffle brings new possibilities and each hand is a story in itself.</p>
 				<ul>
@@ -227,7 +227,7 @@
 				<li>10-Hand Video Poker: Engage in an exciting variant of video poker that allows you to play ten hands simultaneously. This multi-hand version increases the action and potential winnings, providing an exhilarating poker experience.</li>
 				<li>Texas Hold 'em Poker 3D: Immerse yourself in a realistic poker experience.</li>
 				</ul>
-				<h3 id="9">Jackpots</h3>
+				<h3 id="9" class="scroll">Jackpots</h3>
 			
 				<p>Jackpots at Banzaibet are the dreams of fortune-seekers. Each jackpot game is a portal to a world where a single spin can change your life. With each bet, the anticipation builds, and with each spin, you're a step closer to potentially life-changing jackpots.</p>
 				<ul>
@@ -241,7 +241,7 @@
 			
 			<section>
 			
-				<h2 id="10">Banzaibet's Elite Gaming Providers</h2>
+				<h2 id="10" class="scroll">Banzaibet's Elite Gaming Providers</h2>
 			
 				<p>Banzaibet’s gaming excellence is powered by a selection of the industry's most renowned providers. Each brings unique strengths to our gaming portfolio, ensuring a diverse and high-quality experience for players. Here's a closer look:</p>
 				<ul>
@@ -256,7 +256,7 @@
 			
 			<section>
 			
-				<h2 id="11">Promo at Banzaibet Casino</h2>
+				<h2 id="11" class="scroll">Promo at Banzaibet Casino</h2>
 			
 				<p>At Banzai bet Casino, we believe in enriching the player experience with a variety of enticing bonuses. Each bonus is designed to not only boost your gameplay but also to celebrate your milestones and loyalty. Let's delve deeper into these offerings.</p>
 				<h3>Fortune Calling Lottery</h3>
@@ -285,7 +285,7 @@
 			
 			<section>
 			
-				<h2 id="12">Banzaibet Casino's Attractive Deposit Bonuses</h2>
+				<h2 id="12" class="scroll">Banzaibet Casino's Attractive Deposit Bonuses</h2>
 			
 				<p>Banzaibet Casino extends its generosity beyond promotional bonuses, offering a range of enticing deposit bonuses that cater to all players. Whether you're making your first deposit or you're a returning player, these bonuses provide extra value to your gaming experience. Here's a detailed look at the deposit bonuses on offer:</p>
 				<h3>1st Deposit Bonus: Kick-Start Your Gaming Journey</h3>
@@ -324,7 +324,7 @@
 			
 			<section>
 			
-				<h2 id="13">Exciting Tournaments at Banzaibet Casino</h2>
+				<h2 id="13" class="scroll">Exciting Tournaments at Banzaibet Casino</h2>
 			
 				<p>Banzaibet Casino elevates the gaming experience with various captivating tournaments, each offering unique challenges and substantial rewards. These tournaments are designed to cater to various player preferences, ensuring thrilling competition and the opportunity for big wins. Let's delve into the details of these engaging tournaments:</p>
 				<h3>Playson Short Races</h3>
@@ -378,7 +378,7 @@
 			
 			<section>
 			
-				<h2 id="14">Conclusion</h2>
+				<h2 id="14" class="scroll">Conclusion</h2>
 			
 				<p>As we draw the curtains on our comprehensive exploration of Banzai bet, it's clear that this platform stands out as a beacon in the online gaming world. From the vast array of meticulously curated games provided by industry-leading developers to the thrilling, diverse tournaments offering substantial prizes, Banzai.bet Casino creates an immersive and dynamic gaming environment.</p>
 			
@@ -389,7 +389,7 @@
 			
 			<section>
 			
-				<h2 id="FAQ">FAQs</h2>
+				<h2 id="FAQ" class="scroll">FAQs</h2>
 				<ul class="acc-list">
 					<li class="acc-item">
 						<div class="acc-inner">
